--- a/css/ball.css
+++ b/css/ball.css
@@ -51,3 +51,9 @@
         transform: rotate(360deg);
     }
 }
+
+.link a {
+    margin-left: 15px;
+    text-decoration: none;
+    color: #000;
+}
