--- a/css/moon.css
+++ b/css/moon.css
@@ -7,7 +7,7 @@ body {
 .box {
     position: relative;
     width: 400px;
-    margin: 250px auto;
+    margin: 250px auto 150px;
 }
 
 .moon {
@@ -40,4 +40,10 @@ body {
     100% {
         transform: translate(20px, -20px);
     }
+}
+
+.link a {
+    margin-left: 15px;
+    text-decoration: none;
+    color: #fff;
 }
