--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,9 @@ body {
     0% {background-position: 0px 0px;}
     100% {background-position: 150px 400px;}
 }
+
+.link a {
+    margin-left: 15px;
+    text-decoration: none;
+    color: #fff;
+}
